--- a/Pustok/Pustok/Views/Shop/Index.cshtml
+++ b/Pustok/Pustok/Views/Shop/Index.cshtml
@@ -1084,44 +1084,14 @@
                     <div class="single-block">
                         <h3 class="sidebar-title">Categories</h3>
                         <ul class="sidebar-menu--shop">
-                           
-
 
                             @foreach (Genres gn in Model.Genre)
                             {
-                                int count = 0;
-                                foreach (Books bk in Model.book)
-                                {
-                                    if (gn.Id == bk.GenreId)
-                                    {
-                                        count++;
 
-                                    }
-                                }
-                                <li><a href="#">@gn.Name - (@count)</a></li>
+                                <li><a href="#">@gn.Name - (@gn.books.Count)</a></li>
                             }
+                           
 
-
-                            @*<li><a href="#">Arts & Photography (10)</a></li>
-                            <li><a href="#">Biographies (16)</a></li>
-                            <li><a href="#">Business & Money (0)</a></li>
-                            <li><a href="#">Calendars (6)</a></li>
-                            <li><a href="#">Children's Books (9)</a></li>
-                            <li><a href="#">Comics (16)</a></li>
-                            <li><a href="#">Cookbooks (7)</a></li>
-                            <li><a href="#">Education (3)</a></li>
-                            <li><a href="#">House Plants (6)</a></li>
-                            <li><a href="#">Indoor Living (9)</a></li>
-                            <li><a href="#">Perfomance Filters (5)</a></li>
-                            <li>
-                                <a href="#">Shop (16)</a>
-                                <ul class="inner-cat-items">
-                                    <li><a href="#">Saws (0)</a></li>
-                                    <li><a href="#">Concrete Tools (7)</a></li>
-                                    <li><a href="#">Drills (2)</a></li>
-                                    <li><a href="#">Sanders (1)</a></li>
-                                </ul>
-                            </li>*@
                         </ul>
                     </div>
                     <!-- Price -->
